--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Policy Planner</title>
-  <!-- <base href="/"> -->
-  <base href="/super-top-up/">
+  <base href="/">
+  <!-- <base href="/super-top-up/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://www.policyplanner.com/favicon.png">
